<resources>
    <string name="app_name">SaleTracker</string>
    <string name="getting_started">GETTING STARTED</string>

    <string name="splashText">SaleTracker</string>

    <string name="a_login">LOGIN</string>
    <string name="a_login_Username">Username</string>
    <string name="a_login_Password">Password</string>
    <string name="a_login_Button">Sign In</string>

    <string name="login_company">Company</string>
    <string name="login_employee">Employee</string>

    <string name="login_not_registered">Not Yet Registered?</string>
    <string name="login_sign_up">Sign Up</string>

    <string name="btn_sign_up">SIGN UP</string>
    <string name="sign_up_company_name">Company Name</string>
    <string name="sign_up_owner_name">Owner Name</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_phone">Phone Number</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">New Password</string>

    <string name="company_product">PRODUCTS</string>
    <string name="company_employee">EMPLOYEE</string>

    <string name="employee_attendance">ATTENDANCE</string>
    <string name="employee_product">PRODUCTS</string>

    <string name="employee_previous_attendance">Previous Attendance</string>

    <string name="employee_check_in">CHECK IN</string>
    <string name="add_employee">ADD EMPLOYEE</string>
    <string name="check_in_submit">Submit</string>

    <string name="employee_check_out">CHECK OUT</string>

    <string name="product_id">ID</string>
    <string name="product_name">Name</string>
    <string name="product_rate">Rate</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_manufacturer">Manufacturer</string>

    <string name="add_product">Add Product</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>


</resources>
