<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductManageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/employee_product"
        android:textSize="20sp"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical"
        android:paddingBottom="@dimen/row_padding_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productid"
            android:text="@string/product_id"
            android:layout_alignParentTop="true">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productName"
            android:text="@string/product_name"
            android:layout_marginLeft="@dimen/row_padding_vertical"
            android:layout_toEndOf="@+id/productid">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productRate"
            android:text="@string/product_rate"
            android:layout_marginLeft="@dimen/row_padding_vertical"
            android:layout_toEndOf="@+id/productName">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productQuantity"
            android:text="@string/product_quantity"
            android:layout_marginLeft="@dimen/row_padding_vertical"
            android:layout_toEndOf="@+id/productRate">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productManufacturer"
            android:text="@string/product_manufacturer"
            android:layout_marginLeft="@dimen/row_padding_vertical"
            android:layout_toEndOf="@+id/productQuantity">
        </TextView>

</RelativeLayout>
</LinearLayout>
