<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/login_sign_up"
        android:textColor="@color/colorLogin"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_company_name"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:autofillHints="@string/sign_up_company_name"
                android:inputType="text"
                android:textSize="15sp"
                android:background="#ffffe0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_owner_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_owner_name"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:autofillHints="@string/sign_up_owner_name"
                android:background="#ffffe0"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_address"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:autofillHints="@string/sign_up_address"
                android:background="#ffffe0"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_phone"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:autofillHints="@string/sign_up_phone"
                android:background="#ffffe0"
                android:inputType="phone"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_email"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:autofillHints="@string/sign_up_email"
                android:background="#ffffe0"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/text_view_sign_up_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5sp"
                android:text="@string/sign_up_password"
                android:textColor="@color/colorLogin"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_sign_up_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/row_padding_vertical"
                android:inputType="textVisiblePassword"
                android:autofillHints="false"
                android:background="#ffffe0"
                android:textSize="15sp" />
        </LinearLayout>


        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="buttonSignUpClick"
            android:text="@string/btn_sign_up"
            android:textColor="@color/colorLogin"
            android:textSize="25sp" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>